# fastevolve

./: .gitignore  README  README.md  main.py  pyproject.toml
fastevolve/: __init__.py  checkpoint.py  config.py  controller.py  exceptions.py  sandbox.py  telemetry.py
fastevolve/evaluator/: __init__.py  config.py  evaluator.py  result.py
fastevolve/llm_ensemble/: __init__.py  anthropic_llm.py  base.py  config.py  ensemble.py  ollama.py  openai_llm.py  vllm_server.py
fastevolve/program_database/: __init__.py  config.py  database.py  embedder.py  program.py
fastevolve/prompt_sampler/: __init__.py  config.py  sampler.py  template_library.py
